# codeingraph2

./: .gitignore  Architecture.md  Dockerfile  LEIAME_PT.md  README.md  README_EN.md  docker-compose.yml  install_global.sh  mcp-compose.yml
daemon/: Cargo.toml
daemon/migrations/: 001_initial.sql
daemon/src/: config.rs  db.rs  impact.rs  lib.rs  main.rs  watcher.rs
daemon/src/claudemd/: mod.rs
daemon/src/indexer/: languages.rs  mod.rs  parser.rs
daemon/src/obsidian/: mod.rs
daemon/src/web/: auth.rs  mod.rs
daemon/static/: index.html
templates/: CLAUDE.md.tmpl
