[package]
name        = "codeingraph2"
version     = "0.1.0"
edition     = "2021"
authors     = ["codeingraph2 contributors"]
description = "Surgical context daemon + MCP server for code graphs"
license     = "MIT"

[[bin]]
name = "codeingraph2"
path = "src/main.rs"

[[bin]]
name = "mcp_server"
path = "src/bin/mcp_server.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# cli
clap = { version = "4", features = ["derive"] }

# storage
rusqlite = { version = "0.31", features = ["bundled"] }

# file watching (inotify on linux)
notify = "6"

# tree-sitter parsers
tree-sitter            = "0.22"
tree-sitter-rust       = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"

# web
axum        = "0.7"
base64      = "0.22"
subtle      = "2.5"

# misc
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir     = "2"
sha2        = "0.10"
hex         = "0.4"
once_cell   = "1"
chrono      = { version = "0.4", features = ["clock"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
